<resources>
    <string name="app_name">TinTinDeliver</string>
    <string name="title_activity_2">Activity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">TinTin</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_logout">Log Out</string>
    <string name="menu_share">Share</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_add">Add menu</string>
    <string name="menu_update">Edit menu</string>
    <string name="title_activity_home">Home</string>

    <string name="details_name">Name</string>
    <string name="details_address">Address</string>
    <string name="details_mobile">Mobile no</string>
    <string name="details_birthday">Birthday</string>
    <string name="submit">Submit</string>

    <string name="feedback_sub">Subject</string>
    <string name="feedback_desc">Description</string>
    <string name="title_activity_maps">Map</string>

</resources>
