<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
      <item
          android:id="@+id/nav_add"
          android:icon="@drawable/ic_add_black_24dp"
          android:title="Home's Menu"
          />
        <item
            android:id="@+id/nav_tiffinadd"
            android:icon="@drawable/ic_add_black_24dp"
            android:title="Tiffin's Menu"
            />
        <item
            android:id="@+id/nav_edit"
            android:icon="@drawable/ic_edit_black_24dp"
            android:title="@string/menu_update"
            />
        <item
            android:id="@+id/nav_tiffinrequest"
            android:icon="@drawable/tiffin"
            android:title="Tiffin Request" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_feedback_black_24dp"
            android:title="@string/menu_feedback"
            />


        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_close_black_24dp"
            android:title="@string/menu_logout"
            />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
        </menu>
    </item>

</menu>
